feat(auth): implement better authentication middleware and setup
- Added a new authentication middleware using Elysia to handle user sessions.
- Integrated better-auth library with email and password support.
- Configured database connection using drizzle adapter for PostgreSQL.
- Defined authorized origins for CORS in constants.

--- a/apps/elysia/.env.example
+++ b/apps/elysia/.env.example
@@ -10,3 +10,6 @@ EMAIL_FROM="inventory@mail.sender.com"
 FRONTEND_URL="http://localhost:3000"
 PORT=5000
 LOG_LEVEL="debug"
+
+BETTER_AUTH_SECRET=secret
+BETTER_AUTH_URL=http://localhost:4000
