--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -16,22 +16,23 @@
     "drizzle:migrate": "drizzle-kit migrate "
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
     "@elysiajs/node": "^1.4.3",
     "@elysiajs/openapi": "^1.4.13",
     "@sinclair/typebox": "^0.34.46",
     "better-auth": "^1.4.10",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
-    "drizzle-orm": "^0.45.1",
+    "drizzle-orm": "^0.41.0",
     "elysia": "^1.4.21",
     "openapi-types": "^12.1.3",
     "pg": "^8.13.1",
-    "zod": "^3.23.8"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
     "@types/pg": "^8.11.10",
-    "drizzle-kit": "^0.30.1",
+    "drizzle-kit": "^0.31.8",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
     "typescript": "5.9.3"
