--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -20,17 +20,20 @@
     "@elysiajs/node": "^1.4.3",
     "@elysiajs/openapi": "^1.4.13",
     "@sinclair/typebox": "^0.34.46",
+    "@tanstack/query-core": "^5.66.0",
     "better-auth": "^1.4.10",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.41.0",
     "elysia": "^1.4.21",
+    "nodemailer": "^6.9.16",
     "openapi-types": "^12.1.3",
     "pg": "^8.13.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.8",
     "tsc-alias": "^1.8.16",
