--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,7 +9,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@elysiajs/eden": "^1.4.5",
+    "@elysiajs/eden": "^1.4.6",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -38,24 +38,27 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/db": "^0.5.12",
+    "@tanem/react-nprogress": "^5.0.56",
+    "@tanstack/db": "^0.5.17",
     "@tanstack/match-sorter-utils": "^8.19.4",
-    "@tanstack/query-db-collection": "^1.0.7",
-    "@tanstack/react-db": "^0.1.56",
-    "@tanstack/react-devtools": "^0.8.4",
-    "@tanstack/react-form": "^1.27.3",
-    "@tanstack/react-query": "^5.90.12",
-    "@tanstack/react-query-devtools": "^5.91.1",
-    "@tanstack/react-router": "^1.141.2",
-    "@tanstack/react-router-devtools": "^1.141.2",
+    "@tanstack/query-db-collection": "^1.0.13",
+    "@tanstack/react-db": "^0.1.61",
+    "@tanstack/react-devtools": "^0.9.1",
+    "@tanstack/react-form": "^1.27.7",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-router": "^1.145.11",
+    "@tanstack/react-router-devtools": "^1.145.11",
     "@tanstack/react-router-ssr-query": "^1.141.2",
-    "@tanstack/react-start": "^1.141.3",
     "@tanstack/react-table": "^8.21.3",
-    "@tanstack/router-plugin": "^1.141.2",
+    "@tanstack/router-plugin": "^1.145.11",
+    "@tanstack/zod-form-adapter": "^0.42.1",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "elysia": "^1.4.21",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.561.0",
@@ -69,16 +72,17 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "theme-change": "^2.5.0",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.1.13"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@tanstack/devtools-vite": "^0.3.12",
+    "@tanstack/devtools-vite": "^0.4.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^25.0.1",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
@@ -86,7 +90,7 @@
     "jsdom": "^27.3.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.7",
-    "vitest": "^4.0.15",
+    "vitest": "^4.0.16",
     "web-vitals": "^5.1.0"
   }
 }
