--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -12,7 +12,7 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": true,
-
+    "noErrorTruncation": true,
     /* Linting */
     "skipLibCheck": true,
     "strict": true,
@@ -22,7 +22,8 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@backend/*": ["../elysia/src/*"]
     }
   }
 }
