--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -67,6 +67,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-responsive-pagination": "^2.12.0",
     "recharts": "2.15.4",
