--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -22,8 +22,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@backend/*": ["../elysia/src/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
