--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "elysia",
+  "name": "@repo/elysia",
   "type": "module",
   "version": "1.0.0",
+    "exports": {
+      "./*": "./src/*.ts"
+    },
   "scripts": {
     "dev": "tsx watch src/main.ts",
     "build": "tsc -p tsconfig.build.json && tsc-alias",
@@ -20,13 +23,15 @@
     "@elysiajs/cors": "^1.4.1",
     "@elysiajs/node": "^1.4.3",
     "@elysiajs/openapi": "^1.4.13",
+    "@repo/isomorphic": "workspace:*",
     "@sinclair/typebox": "^0.34.46",
     "@tanstack/query-core": "^5.66.0",
-    "better-auth": "^1.4.10",
+    "better-auth": "*",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.41.0",
     "elysia": "^1.4.21",
+    "ioredis": "^5.9.1",
     "nodemailer": "^6.9.16",
     "openapi-types": "^12.1.3",
     "pg": "^8.13.1",
