refactor: update user role handling and improve admin user management dialogs
- Replaced `InferUserRoles` with `BetterAuthUserRoles` in AdminUsersPage and UserProfileCard components for consistency.
- Introduced new AdminsUserDialogs component for creating, updating, banning, unbanning, and removing users with improved dialog handling.
- Added user management hooks for creating, updating, banning, unbanning, and removing users in the admin context.
- Created new data access layer files for user invitations and user organizations to streamline organization and invitation management.
- Updated TypeScript configuration to extend from a base configuration and exclude specific directories.
- Cleaned up pnpm lock file by removing unused dependencies.

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -52,7 +52,6 @@
     "@tanstack/react-router-ssr-query": "^1.141.2",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/router-plugin": "^1.145.11",
-    "@tanstack/zod-form-adapter": "^0.42.1",
     "better-auth": "*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -96,6 +95,8 @@
     "typescript": "^5.9.3",
     "vite": "^7.2.7",
     "vitest": "^4.0.16",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "web-vitals": "^5.1.0"
   }
 }
