--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@repo/elysia": "workspace:*",
+    "@repo/isomorphic": "workspace:*",
     "@tailwindcss/vite": "^4.1.18",
     "@tanem/react-nprogress": "^5.0.56",
     "@tanstack/db": "^0.5.17",
@@ -45,6 +47,7 @@
     "@tanstack/react-db": "^0.1.61",
     "@tanstack/react-devtools": "^0.9.1",
     "@tanstack/react-form": "^1.27.7",
+    "@tanstack/react-pacer": "^0.19.1",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-router": "^1.145.11",
@@ -77,12 +80,13 @@
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.3.5",
-    "@repo/elysia": "workspace:*",
-    "@repo/isomorphic": "workspace:*"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@tanstack/devtools-vite": "^0.4.1",
+    "@tanstack/react-pacer-devtools": "^0.5.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^25.0.3",
@@ -95,8 +99,6 @@
     "typescript": "^5.9.3",
     "vite": "^7.2.7",
     "vitest": "^4.0.16",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "web-vitals": "^5.1.0"
   }
 }
