--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "eslint": "^9.39.1",
     "prettier": "^3.7.4",
     "turbo": "^2.7.3",
     "typescript": "5.9.2"
