--- a/packages/isomorphic/package.json
+++ b/packages/isomorphic/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "typescript": "*"
+    "typescript": "*",
+    "eslint": "*"
   }
 }
