feat: update import paths and package name for consistency; enhance TypeScript configuration for better module resolution

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -24,7 +24,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@elysia/*": ["../../apps/elysia/src/*"]
     }
   }
 }
