feat(db): add initial migration for properties table and reset script
- Added a new migration script to modify the properties table:
  - Added `organization_id` column with a foreign key constraint to the organization table.
  - Created an index on `organization_id`.
  - Dropped `landlord_id` and `manager_id` columns.

- Created a snapshot of the database schema reflecting the current state of all tables and their relationships.

- Introduced a new script to reset the database using the defined schema, allowing for easy database reinitialization.

--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -17,7 +17,8 @@
     "db:gen": "drizzle-kit generate",
     "db:push": "drizzle-kit push ",
     "db:studio": "drizzle-kit studio",
-    "db:migrate": "drizzle-kit migrate "
+    "db:migrate": "drizzle-kit migrate",
+    "db:reset": "drizzle-kit reset"
   },
   "dependencies": {
     "@bogeychan/elysia-logger": "^0.1.10",
@@ -44,8 +45,9 @@
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.31.8",
-    "prettier": "*",
+    "drizzle-seed": "^0.3.1",
     "eslint": "*",
+    "prettier": "*",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
     "typescript": "5.9.3"
