Refactor database schema and access control
- Removed legacy schema files for maintenance, payments, properties, and units.
- Introduced new schema files for documents, leases, maintenance requests, payments, properties, and units with updated relations.
- Updated access control logic to utilize new role management from isomorphic package.
- Added new user, session, account, verification, and organization tables with appropriate relations.
- Created migration script to establish new database structure.

--- a/apps/elysia/package.json
+++ b/apps/elysia/package.json
@@ -18,7 +18,7 @@
     "db:push": "drizzle-kit push ",
     "db:studio": "drizzle-kit studio",
     "db:migrate": "drizzle-kit migrate",
-    "db:reset": "drizzle-kit reset"
+    "db:reset": "tsx src/scripts/db-reset.ts"
   },
   "dependencies": {
     "@bogeychan/elysia-logger": "^0.1.10",
